Add settings dialog
- Implement UI to take input for game initialization and settings.

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
   <body>
     <section class="utility-bar">
       <div class="title">BATTLESHIP</div>
-      <div class="options">
-        <button class="player-one-options-button"></button>
-        <button class="player-two-options-button"></button>
+      <div class="utility-bar-buttons">
+        <button class="settings-button">Settings</button>
+        <button class="restart-game">Restart</button>
       </div>
     </section>
     <main>
-      <div class="current-player">Current Player</div>
+      <div class="current-player"></div>
       <div class="board-container"></div>
       <div class="game-statistics"></div>
     </main>
