Implement placement state logic for Battleship
- Added `fleetPlacementStateManager` and `fleetPlacementStateListeners`:
  - These modules manage the logic and event listeners related to ship placement.
  - Functionality includes showing, clearing, and updating ship placement previews.
  - Handles processing of ship placement requests in the game interface.

- Added `gridPlacementStateManager` and `gridPlacementStateListeners`:
  - These modules are responsible for handling logic and events on the main grid during the ship placement phase.
  - They update and manage ship elements when rotated, selected, and placed.

- Reorganized and optimized file structure for better modularity:
  - Migrated game board and settings dialog builders to `src/js/ui/game-board` and `src/js/ui/settings-dialog`.
  - Refactored rendering logic into `src/js/ui/render`, improving code separation and clarity.

- Various modifications and deletions to improve code organization and
  readability, enhancing overall game functionality and user experience.

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,10 @@
       <div class="title">BATTLESHIP</div>
       <div class="utility-bar-buttons">
         <button class="settings-button">Settings</button>
-        <button class="restart-game">Restart</button>
       </div>
     </section>
     <main>
-      <div class="current-player"></div>
+      <h2 class="current-player"></h2>
       <div class="board-container"></div>
       <div class="game-statistics"></div>
     </main>
