Continue render refactor

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,7 @@
         <button class="settings-button">Settings</button>
       </div>
     </section>
-    <main>
-      <h2 class="current-player"></h2>
-      <div class="board-container"></div>
-    </main>
-
+    <main></main>
     <footer class="footer-container">
       <p>Copyright &copy; 2023 Nolan Gajdascz</p>
       <a href="https://github.com/Gajdascz" target="_blank" rel="noopener noreferrer">
