Continue state and event management system production

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <button class="settings-button">Settings</button>
       </div>
     </section>
-    <main></main>
+    <main class="game-container"></main>
     <footer class="footer-container">
       <p>Copyright &copy; 2023 Nolan Gajdascz</p>
       <a href="https://github.com/Gajdascz" target="_blank" rel="noopener noreferrer">
