Refactor styling and dialogs
- Finished Settings dialog.
  - Settings now store and provide the given input through the
    Controller and Model.
  - Settings can be passed to Game controller to initialize components.
- Started moving component-specific styles to their respective component
  folders.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
     <section class="utility-bar">
       <div class="title">BATTLESHIP</div>
       <div class="utility-bar-buttons">
-        <button class="settings-button">Settings</button>
+        <button class="instructions-button base-button">Instructions</button>
+        <button class="settings-button base-button">Settings</button>
       </div>
     </section>
     <main class="game-container"></main>
